# r_nes

./: Cargo.toml  README.md
src/: addressing.rs  bus.rs  cartridge.rs  console.rs  cpu.rs  emulator.rs  flags.rs  main.rs  op_code.rs  ppu.rs  screen.rs  util.rs
testing/: compare.py
